--- a/django/urlshortener/templates/index.html
+++ b/django/urlshortener/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <meta charset="utf-8" />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <title>Shortener</title>
@@ -8,6 +12,7 @@
       body {
         font-family: 'Roboto', sans-serif;
         font-size: 30pt;
+        color: #212F3D;
       }
       .main_table {
         position: absolute;
@@ -17,15 +22,14 @@
       .url_form {
         align: middle;
         margin: center;
-        width: 500px;
-        height: 100px;
+        width: 100%;
       }
       .submit_button {
         color: #fff !important;
         text-transform: uppercase;
         text-decoration: none;
         background: #4285F4;
-        padding: 15px;
+        padding: 20px;
         border-radius: 30px;
         display: inline-block;
         border: none;
@@ -33,16 +37,20 @@
         font-size:20pt;
       }
       .url_input {
-        height: 45px;
-        width: 250px;
-        border: 0;
+        height: 40px;
+        width: 550px;
+        border: 3;
+        outline:none;
         border-bottom: 2px solid #1976D2;
-        font-size: 30px;
+        border-top: 2px solid #1976D2;
+        border-left: 2px solid #1976D2;
+        border-right: 2px solid #1976D2;
+        font-size: 25pt;
         line-height: 35px;
         text-align: center;
         padding: 10px;
         background: transparent;
-        color: #212F3D;
+        border-radius: 30px;
       }
     </style>
   </head>
@@ -51,19 +59,49 @@
     <table class=main_table><tr>
       <td align=center>
         <div class=url_form>
-          <table><tr>
-            <td>
-              <p for="url_input">URL: </p>
+          <table>
+            <tr>
+              <td align=center style="font-size:30pt">
+                Paste the URL to be shortened
+              </td>
+            </tr>
+            <tr> <td>
+            <table style="border-spacing:10px">
+              <tr>
+              <td text-align=center>
+                <input id="url-input" class=url_input type="text" name="name" required>
+              </td>
+              <td>
+                <button id="submit-button" type="submit" class=submit_button>Short!</button>
+              </td>
+              </tr> </table> </td>
+          </tr>
+          <tr>
+            <td height=300pt>
+              <div height=300pt width=100% align=center style="font-size:40pt">
+              </div>
             </td>
-            <td width=50px text-align=center>
-              <input class=url_input type="text" name="name" required>
-            </td>
-            <td>
-              <button type="submit" class=submit_button>Short!</button>
-            </td>
-          </tr></table>
+          </tr>
+          </table>
         </div>
       </td>
       </tr></table>
+
   </body>
+  <script>
+    window.onload = function() {
+      console.log("Page loaded");
+      $("#submit-button").on("click", function () {
+        var html = document.documentElement.innerHTML;
+        $.ajax({
+          url: '/short_url/',
+          type: "POST",
+          data: {"html": html},
+          success: function (data) {
+            $("#result-url").last().html(data.url);
+          }
+        });
+      });
+    };
+  </script>
 </html>
